=== and the other UPGRADE files for older releases.
===
==============================================================================
------------------------------------------------------------------------------
--- Functionality changes from Asterisk 11 to Asterisk 12 --------------------
------------------------------------------------------------------------------

AMI (Asterisk Manager Interface)
------------------
 * The SIPshowpeer action will now include a 'SubscribeContext' field for a peer
   in its response if the peer has a subscribe context set.

 * The SIPqualifypeer action now acknowledges the request once it has established
   that the request is against a known peer. It also issues a new event,
   'SIPqualifypeerdone', once the qualify action has been completed.

 * The PlayDTMF action now supports an optional 'Duration' parameter.  This
   specifies the duration of the digit to be played, in milliseconds.

 * Added VoicemailRefresh action to allow an external entity to trigger mailbox
   updates when changes occur instead of requiring the use of pollmailboxes.

 * CLI Command 'Manager Show Commands' no longer truncates command names longer
   than 15 characters and no longer shows authorization requirement for commands.
   'Manager Show Command' now displays the privileges needed for using a given
   manager command instead.

Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an